--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,7 +45,10 @@
                           </li>
                           <li class="nav-item">
                               <a class="nav-link" href="{{ path('doc') }}">Doc</a>
-                          </li>                          				  
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('user_index') }}">User</a>
+                          </li>
                       </ul>
                 </div>
                 <form class="form-inline">
