--- a/app/Resources/views/user/edit.html.twig
+++ b/app/Resources/views/user/edit.html.twig
@@ -1,4 +1,4 @@
-
+{# empty Twig template #}
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
@@ -8,17 +8,20 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Créer un nouvel utilisateur</h1>       
+        <h1>Modifier l'utilisateur</h1>        
         <div class="form-group mb-2">
-        {{ form_start(form) }}
-        {{ form_row(form.username) }}
-        {{ form_row(form.email) }}
-        {{ form_row(form.plainPassword.first) }}
-        {{ form_row(form.plainPassword.second) }}
-        <button type="submit">Register!</button>
-        {{ form_end(form) }}
+        {{ form_start(edit_form) }}           
+        {{ form_widget(edit_form) }}                         
+        {{ form_rest(edit_form) }}
+         <button type="submit">Register!</button>
+        {{ form_end(edit_form) }}               
+        </div> 
     </div> 
 {% endblock %}
 
+
 {% block javascripts %}
+
 {% endblock %}
+    
+
