--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,7 +62,8 @@
         <div class="container">
              <div class = "row my-3">
                  <div class ="col-md-12 ">
-                    <a class="btn btn-primary" href="{{ path('login') }}" role="button">Login</a>
+                    <a class="btn btn-success" href="{{ path('login') }}" role="button">Sign in <i class="fas fa-sign-in-alt"></i></a>
+                    <a class="btn btn-danger" href="{{ path('logout') }}" role="button">Sign out <i class="fas fa-sign-out-alt"></i></a>
                  </div>
              </div>      
             
