--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -83,7 +83,8 @@
             <h5>Début de journée légale : <span id="startLegalDay"></span></h5>
             <h5>Fin de journée légale : <span id="endLegalDay"></span></h5>
             <h5>Heures totalisés cette semaine : <span id="hoursPerWeek"></span></h5>
-            <h5>Temps de repos entre 2 J : <span id="interval"></span></h5>
+            <h5>Temps de repos avant DDay : <span id="intervalBefore"></span></h5>
+            <h5>Temps de repos après DDay : <span id="intervalAfter"></span></h5>
             
             
            {# {% for dateBetween in dateBetweens %}
