ok calculate rules

--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -80,8 +80,8 @@
             <h5>Détail : <span id="description"></span></h5>
             <h5>Début de semaine légale : <span id="startLegalWeek"></span></h5>
             <h5>Fin de semaine légale : <span id="endLegalWeek"></span></h5>
-            <h5>Début de journée légale : <span id="startLegalDay"></span></h5>
-            <h5>Fin de journée légale : <span id="endLegalDay"></span></h5>
+            <h5>Début de journée : <span id="startLegalDay"></span></h5>
+            <h5>Fin de journée : <span id="endLegalDay"></span></h5>
             <h5>Heures totalisés cette semaine : <span id="hoursPerWeek"></span></h5>
             <h5>Temps de repos avant DDay : <span id="intervalBefore"></span></h5>
             <h5>Temps de repos après DDay : <span id="intervalAfter"></span></h5>
