--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,71 +13,78 @@
     <body>
         {% block nav %}
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light py-3" style="background-color: #e3f2fd;">
-                <a class="navbar-brand" href="{{ path('home') }}">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/%C3%89lectricit%C3%A9_de_France_logo.svg/1200px-%C3%89lectricit%C3%A9_de_France_logo.svg.png" width="171px" height="auto" class="d-inline-block align-top" alt="">						
-                </a>
-                <div class="collapse navbar-collapse ml-4" id="navbarNav">
-                      <ul class="navbar-nav">
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showAgenda') }}">Agenda</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showrule') }}">Règles</a>
-                          </li>
-                           <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showagent') }}">Agents</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showteam') }}">Equipes</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showletter') }}">Codes</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showSection') }}">Section</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('ShowService') }}">Service</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showEvent') }}">Arrêt</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('doc') }}">Doc</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('user_index') }}">User</a>
-                          </li>
-                      </ul>
+            <div class="row align-items-center">
+                <div class =" col-md-4">
+                    <a class="navbar-brand" href="{{ path('home') }}">
+                        <img src="{{ asset('/assets/images/EDF-logo.png') }}" width="auto" height="100px"  alt="">						
+                    </a>  
                 </div>
-                <form class="form-inline">
-                      <input class="form-control mr-sm-2" type="search" placeholder="Agent, NNI... Service">
-                      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
-                </form>			  
-            </nav>
+                <div class =" col-md-4">
+                    <h2>Planning RHAT</h2>
+                </div>
+                <div class =" col-md-4">
+                    <a class="navbar-brand" href="{{ path('home') }}">
+                        <img src="{{ asset('/assets/images/logo-site-Saint-Alban.jpg') }}" width="auto" height="100px" alt="">						
+                    </a> 
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-end" style="background-color: #09357A;">                
+                <span class="mr-2 text-white">Bonjour {% if  app.user %} {{ app.user.username }} {% endif %}</span>
+                <span class="mr-2 text-white">
+                    {% if  app.user %}
+                        <a class="btn btn-danger mx-1" href="{{ path('logout') }}" role="button">Déconnexion <i class="fas fa-sign-out-alt"></i></a>
+                    {% else %}
+                        <a class="btn btn-success mx-1" href="{{ path('login') }}" role="button"> Connexion<i class="fas fa-sign-in-alt"></i></a>
+                    {% endif %}                    
+                </span>
+            </div>        
+            <div class="row" style="background-color: #e3f2fd;">  
+                <nav class="navbar navbar-expand-lg navbar-light" >               
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                          <ul class="navbar-nav align-items-center justify-content-end">                         
+                              <li class="nav-item ">
+                                    <a href="{{ path('home') }}">
+                                        <i class="fas fa-home fa-1x"></i>
+                                    </a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('showAgenda') }}">Agenda</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('showrule') }}">Règles</a>
+                              </li>
+                               <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('showagent') }}">Agents</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('showteam') }}">Equipes</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('showletter') }}">Codes</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('showSection') }}">Section</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('ShowService') }}">Service</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('showEvent') }}">Arrêt</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('doc') }}">Doc</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{{ path('user_index') }}">User</a>
+                              </li>
+                          </ul>
+                    </div>
+                </nav>
+            </div>                        
         </div>
         {% endblock %}
     
         <div class="container">
-             {% if  app.user %}
-             <div class = "row my-3">
-                 <div class ="col-md-12 ">
-                    <a class="btn btn-danger" href="{{ path('logout') }}" role="button">Sign out <i class="fas fa-sign-out-alt"></i></a>                   
-                </div> 
-             </div>
-            <div class = "row my-3">
-            <div class ="col-md-12 ">
-                <h5>Bonjour, {{ app.user.username }}</h>
-            </div>              
-            {% else %}
-            <div class = "row my-3">
-                <div class ="col-md-12 ">
-                    <a class="btn btn-success" href="{{ path('login') }}" role="button">Sign in <i class="fas fa-sign-in-alt"></i></a>
-                 </div>
-             </div>  
-            {% endif %} 
-                
             <div class = "row my-3">
                <div class ="col-md-12 ">
                 {% for label, messages in app.flashes %}
