--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -5,6 +5,10 @@
 {% block title %}Agenda{% endblock %}
 {% block body %}    
 <div class="container">
+     <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark"></em>AGENDA</h1>
+            <p>Consulter, modifier, imprimer la planning de vos équipes</p>
+    </header>
     <div class= "row">
         <div class="col-md-12">
             <form action="{{ path('showAgenda') }}" method="post" class="form form-inline">
