--- a/app/Resources/views/service/show.html.twig
+++ b/app/Resources/views/service/show.html.twig
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-1">
                 <span class="fa-stack fa-1x my-2">
-                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="far fa-circle fa-stack-2x"></i>
                     <a href="{{ path('createService') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
                 </span>                    
             </div>                
