--- a/app/Resources/views/event/show.html.twig
+++ b/app/Resources/views/event/show.html.twig
@@ -8,8 +8,8 @@
 {% block body %}   
     <div class="container">       
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Evènements </em></h1>
-            <p>Voici la liste des évènements</p>
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Arrêts de tranche </em></h1>
+            <p>Voici la liste des arrêts de tranche, vacances scolaires...</p>
         </header>
         <div class="row">
             <div class="col-md-1">
@@ -29,6 +29,8 @@
                             <th>Code</th>
                             <th>Date de début</th>
                             <th>Date de fin</th>
+                            <th></th>
+                            <th></th>
                         </tr>
                     </thead>                    
                     <tbody> 
