--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -2,9 +2,13 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>{% endblock %}
-{% block title %}Agenda{% endblock %}
+{% block title %}Agenda Brouillon{% endblock %}
 {% block body %}    
 <div class="container">
+    <header class="text-center py-3">
+        <h1 class="bg-white-semi_transparent"><em class="text-dark"></em>AGENDA BROUILLON</h1>
+        <p>Modifier le planning de vos équipes</p>
+    </header>
     <div class= "row">
         <div class="col-md-12">
             <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
@@ -38,10 +42,10 @@
                         <th scope ="col" class="text-info"></th>
                     </tr>
                     <tr class="bg-muted">
-                        <th scope ="col" class="text-info">Nom</th>
-                        <th scope ="col" class="text-info">Prénom</th>
-                        <th scope ="col" class="text-info">NNI</th>
-                        <th scope ="col" class="text-info">Fonction</th>
+                        <th scope ="col" class="text-color-blue">Nom</th>
+                        <th scope ="col" class="text-color-blue">Prénom</th>
+                        <th scope ="col" class="text-color-blue">NNI</th>
+                        <th scope ="col" class="text-color-blue">Fonction</th>
                         {% for dateBetween in dateBetweens %}
                         <th scope ="col" class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
                         {% endfor %}
@@ -69,7 +73,7 @@
                                         ">{{ letter.letter.letter }}
                                 </td>
                             {% endfor %}
-                            <td class="update" scope ="col"><i class="fas fa-edit text-primary"></i></td>
+                            <td class="update" scope ="col"><i class="fas fa-edit text-color-blue"></i></td>
                             <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
                             <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>                                                                
                         </tr>
