--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}    
     <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Bienvenue sur </em>PLANIFICATION RHAT</h1>
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Bienvenue sur </em>PRRHAT</h1>
             <p>La nouvelle application de saisie du planning des agents, pour les arrêts de tranche.</p>
     </header>
                   
@@ -19,7 +19,7 @@
                         <div class="card">							
                         <div class="card-body">
                             <h3 class="card-title mb-5">Agent, <BR>chef d'équipe...</h3>							
-                            <p class="card-text mx-3 mb-5"><strong>Voir, imprimer, modifier </strong><br>mon planning ou celui de mon équipe sur le prochain arrêt de tranche.</p>
+                            <p class="card-text mx-3 mb-5"><strong>Voir, imprimer, modifier </strong><br>mon planning sur le prochain arrêt de tranche.</p>
                             <a href="{{path('showAgenda')}}" class="btn btn-primary btn-lg" role="button"><i class="fas fa-eye"></i> Voir le planning</a>
                         </div>
                         </div>
@@ -27,7 +27,7 @@
                         <div class="card-body">
                             <h3 class="card-title mb-5">Appui RH, <br>Délégué ressources...</h3>							
                             <p class="card-text mx-3 mb-5"><strong>Renseigner</strong><br> le prochain arrêt de tranche, les vacances scolaires, le code planning...</p>
-                            <a href="{{path('accueiladmin')}}" class="btn btn-primary btn-lg" role="button"><i class="fas fa-white fa-edit "></i> Editer les informations</a>
+                            <a href="{{path('accueiladmin')}}" class="btn btn-primary btn-lg" role="button"><i class="fas fa-edit"></i> Editer les informations</a>
                         </div>
                     </div>
                 </div>
