--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -14,15 +14,9 @@
         <div class="row">
             <div class="col-md-12">
                 <span class="fa-stack fa-1x my-2">
-                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="far fa-circle fa-stack-2x"></i>
                     <a href="{{ path('addAgent', { 'id': team.id }) }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
                 </span>
-                 <span class="text-primary">Ajouter</span>
-                <span class="fa-stack fa-1x my-2">
-                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <a href="{{ path('showteam') }}"><i class="fas fa-eye fa-stack-1x fa-inverse"></i></a>                    
-                </span>
-                <span class="text-primary">Voir toutes les équipes</span>
             </div>                
         </div>  
         <div class= "row">
