--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -7,7 +7,7 @@
 <div class="container">
     <header class="text-center py-3">
         <h1 class="bg-white-semi_transparent"><em class="text-dark"></em>AGENDA BROUILLON</h1>
-        <p>Modifier le planning de vos équipes</p>
+        <p>Modifier votre planning ou celui de vos équipes</p>
     </header>
     <div class= "row">
         <div class="col-md-12">
