--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -80,8 +80,8 @@
                    {% endfor %}                        
                 </tbody>                 
             </table>
-            <h5>Description : <span id="titre"></span></h5>            
-            <h5>Détail : <span id="description"></span></h5>
+            <h5>Titre : <span id="titre"></span></h5>
+            <h5>Description : <span id="description"></span></h5>
             <h5>Début de semaine légale : <span id="startLegalWeek"></span></h5>
             <h5>Fin de semaine légale : <span id="endLegalWeek"></span></h5>
             <h5>Début de journée : <span id="startDay"></span></h5>
