--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -89,6 +89,7 @@
             <h5>Heures totalisés cette semaine : <span id="hoursPerWeek"></span></h5>
             <h5>Temps de repos avant DDay : <span id="intervalBefore"></span></h5>
             <h5>Temps de repos après DDay : <span id="intervalAfter"></span></h5>
+            <h5>Average : <span id="average"></span></h5>
             
             
            {# {% for dateBetween in dateBetweens %}
